--- a/frontend.html
+++ b/frontend.html
@@ -72,7 +72,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://futrli.workable.com/j/30D409C576'>Futrli - Jobs: Lead Frontend Engineer - Apply online</a></h5> 
+<h5><a href='https://futrli.workable.com/j/30D409C576'>Futrli - Jobs: Lead Frontend Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -96,7 +96,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://invers.recruitee.com/o/softwareentwickler-schwerpunkt-webfrontends-mit-javascript-wmd'>
+<h5><a href='https://invers.recruitee.com/o/softwareentwickler-schwerpunkt-webfrontends-mit-javascript-wmd'>
       Software-Entwickler, Schwerpunkt Webfrontends mit Javascript (w/m/d) - INVERS
     </a></h5> 
 <p><span class="badge badge-light">K?ln, Deutschland</span></p>
@@ -121,6 +121,18 @@
 <h5><a href='https://gowago.join.com/jobs/267630-senior-front-end-developer'>Job @ GOWAGO (Z?rich): Senior Front-End Developer | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://bitpesa.workable.com/jobs/1080268'>Jobs: Senior Front-End Engineer - Apply online - BitPesa</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 20, 2019 ... Apply online for the job of Senior Front-End Engineer at BitPesa.</p>
+<hr/>
+<h5><a href='https://learnworlds.workable.com/j/715823C61C'>LearnWorlds - Jobs: Front End Engineer - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>5 days ago ... Apply online for the job of Front End Engineer at LearnWorlds.</p>
+<hr/>
+<h5><a href='https://heavenhr.workable.com/j/5A3C6A3527?viewed=true'>Lead Frontend Engineer - React (m/f/x) - Apply ... - HeavenHR - Jobs</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>5 days ago ... Apply online for the job of Lead Frontend Engineer - React (m/f/x) at HeavenHR.</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Lingoda/743999692092533-frontend-backend-developer-remote-'>Lingoda Frontend/Backend Developer (Remote) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
@@ -166,7 +178,7 @@ have?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of Front-end Developer - CONTRACT at Pulselive.</p>
 <hr/>
-<h5><a href='https://drover.workable.com/j/7E8855D6FA?viewed=true'>Drover - Jobs: Lead Frontend Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://drover.workable.com/j/7E8855D6FA?viewed=true'>Drover - Jobs: Lead Frontend Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of Lead Frontend Developer at Drover.</p>
 <hr/>
@@ -210,7 +222,7 @@ have?...</p>
 <p><span class="badge badge-light">Italy</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/carousell/jobs/1793994'>Job Application for Software Engineer, Frontend Web (Vietnam) at ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/carousell/jobs/1793994'>Job Application for Software Engineer, Frontend Web (Vietnam) at ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Carousell is one of the world's largest and fastest growing mobile classifieds 
 apps. Since our launch in May 2012, we've expanded into 19 major cities with 
@@ -222,7 +234,7 @@ over?...</p>
 features in a rapidly growing startup. We build for perfection, use the most 
 modern?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/credsimple/jobs/4368765002'>Job Application for Frontend Engineer at CredSimple</a></h5> 
+<h5><a href='https://boards.greenhouse.io/credsimple/jobs/4368765002'>Job Application for Frontend Engineer at CredSimple</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... We are looking for a talented Frontend Engineer to lead our efforts in building an 
 industry-leading SaaS based platform that solves a suite of provider data?...</p>
@@ -256,7 +268,7 @@ If you're looking for a career with a purpose, you've come to the right place.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://scalablecapital.recruitee.com/o/frontend-engineer-mfx-munich'>Frontend Engineer (m/f/x) - Scalable Capital GmbH</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://scalablecapital.recruitee.com/o/frontend-engineer-mfx-munich'>Frontend Engineer (m/f/x) - Scalable Capital GmbH</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... As Frontend Engineer, you will. Work alongside a highly motivated team of 
 software engineers and academics implementing change in the financial industry
@@ -374,7 +386,7 @@ machine learning alongside financial engineering to continuously turn data into?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/patientslikeme/jobs/1783776?gh_jid=1783776'>Job Application for Principal Front-End Engineer at PatientsLikeMe</a></h5> 
+<h5><a href='https://boards.greenhouse.io/patientslikeme/jobs/1783776?gh_jid=1783776'>Job Application for Principal Front-End Engineer at PatientsLikeMe</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -451,18 +463,6 @@ published: 19.06.2019). Apply now or check the other available jobs.</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/reddit/jobs/1788975'>Job Application for Staff Frontend Engineer, Ads Engineering at Reddit</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
-<p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/reddit/jobs/1789004'>Job Application for Staff Frontend Engineer, Ads Engineering at Reddit</a></h5> 
-<p><span class="badge badge-light">Los Angeles</span></p>
-<p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/reddit/jobs/1789011'>Job Application for Staff Frontend Engineer, Ads Engineering  at Reddit</a></h5> 
-<p><span class="badge badge-light">New York</span></p>
-<p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/reddit/jobs/1789014'>Job Application for Staff Frontend Engineer, Ads Engineering at Reddit</a></h5> 
-<p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
 
